<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FunDrive</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">desc</string>
    <string name="menu_about">About</string>
    <string name="menu_zoom">Zoom</string>
    <string name="menu_setaswallpaper">Set WallPaper</string>
    <string name="img_no">No Favorite Found</string>
    <string name="setaswallpaper">Set As Wallpaper</string>
    <string name="ringserchr">Search</string>
    <string name="download">Downloading</string>
    <string name="download_text">Download</string>
    <string name="set_ring">Standard Ringtone</string>
    <string name="set_ringnotification">Notification Ringtone</string>
    <string name="set_ringalarm">Alarm Ringtone</string>
    <string name="btn_submit">Submit</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Authentication Activity Message -->
    <string name="autho_signin">Sign In</string>
    <string name="autho_signup">Sign Up</string>
    <string name="autho_email">Email</string>
    <string name="autho_password">Password</string>
    <string name="autho_passwordre">Repeat Password</string>
    <string name="autho_fullname">Full Name</string>
    <string name="autho_idno">Id. No</string>
    <string name="autho_address">Physical Address</string>
    <string name="autho_postaddress">Postal Address</string>
    <string name="autho_contactno">Contact Number</string>
    <string name="autho_forgot">Send Code</string>
    <string name="autho_forgot_msg">Forgot Password?</string>
    <string name="autho_remember">Remember Me</string>

    <!-- connection -->
    <string name="conn_msg1">Internal server error</string>
    <string name="conn_msg2">Switch on your internet</string>
    <string name="conn_msg3">No Network Connection!!!</string>
    <string name="conn_msg4">Internet Connection Error</string>
    <string name="loading">Loading..</string>
    <string name="nodata">No data found from web!!!</string>
    <string name="conn_msg5">May Server Under Maintaines Or Low Network</string>

    <!-- Upload -->
    <string name="image_upload">Wall Paper Upload</string>
    <string name="ring_upload">Ring Tone Upload</string>
    <string name="video_upload">Video Upload</string>
    <string name="select_cat">Wallpaper Category Name</string>
    <string name="select_catvideo">Video Category Name</string>
    <string name="select_catvideotype">Select Upload Type</string>
    <string name="tag">Tag</string>
    <string name="videoSec">Browse Video File Here</string>
    <string name="videoname">Video Name</string>
    <string name="yt_url">Youtube Url</string>
    <string name="add_image">Browse Image Here</string>
    <string name="add_video">Video</string>
    <string name="choose_img">Browse File</string>
    <string name="choose_video">Browse Video</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload">Upload</string>
    <string name="upload_selecrcate">Select Ringtone Category</string>
    <string name="submit">Submit</string>

    <!-- Load More -->
    <string name="numofitemcat">10</string> <!-- for Category -->
    <string name="numofitemimage">10</string> <!-- for Item -->
 
    <!-- admob id -->
     <string name="admob_publisher_id">ca-app-pub-8356404931736973/7108326397</string><!-- your admob id -->
	  <string name="admob_intertestial_id">ca-app-pub-8356404931736973/8585059598</string><!-- your admob intertestal ad id -->
	

    <!-- FeedBack -->
    <string name="feedback_name">Name</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_msg">Message</string>
    <string name="feedback_submit">Feedback</string>

    <!-- youtube -->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="youtube_api_key">AIzaSyAYJwy6nzCFqgr5LtihRI3YuVBb_34aprw</string>

    <!-- video type select -->
    <string-array name="videotype">
        <item>Youtube</item>
        <item>Upload From Mobile</item>
    </string-array>
    
    <!-- main features screen name -->
    <string name="wallpaper_main">Wallpaper</string>
    <string name="ringtone_main">Ringtone</string>
    <string name="video_main">Videos</string>
    
    <!-- main menu overflow-->
    <string name="slide_menufav">My Favorites</string>
    <string name="slide_menudown">My Download</string>

</resources>