<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".WallMainActivity" >

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp" >

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/email"
            android:drawableStart="@drawable/email"
            android:hint="@string/autho_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/wall_textcolor"
            android:textColorHint="#cccccc" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="@string/autho_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/wall_textcolor"
            android:textColorHint="#cccccc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_marginTop="5dip"
            android:background="@drawable/edittext_top_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/toggle_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="2.5"
                android:text="@string/autho_remember"
                android:textColor="#cccccc"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSingIn"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/login_hoverbtnselect"
            android:padding="10dp"
             />

        <TextView
            android:id="@+id/txt_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/autho_forgot_msg"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/upload_textcolor" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>