<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".WallMainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_top_bg"
                android:drawableLeft="@drawable/user"
                android:drawableStart="@drawable/user"
                android:hint="@string/autho_fullname"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/wall_textcolor"
                android:textColorHint="#bbbbbb"
                android:textCursorDrawable="@null" >
            </EditText>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_top_bg"
                android:drawableLeft="@drawable/email"
                android:drawableStart="@drawable/email"
                android:hint="@string/autho_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/wall_textcolor"
                android:textColorHint="#bbbbbb"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:layout_marginTop="-2dp"
                android:background="@drawable/edittext_top_bg"
                android:drawableLeft="@drawable/password"
                android:drawableStart="@drawable/password"
                android:hint="@string/autho_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/wall_textcolor"
                android:textColorHint="#bbbbbb"
                android:textCursorDrawable="@null" />

            <Button
                android:id="@+id/btnSingUp"
                style="@style/DefaultButtonText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="7dp"
                android:background="@drawable/signup_hoverbtnselect"
                android:padding="10dp" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>