<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginbg" >

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_selecrcate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/upload_selecrcate"
                android:textColor="@color/upload_scrntext_clr"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_selectcate"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/upload_edttxt_border" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_addrtitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="Ringtone Name"
                android:textColor="@color/upload_scrntext_clr"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/upload_edttxt_border"
                android:ems="10"
                android:hint="Ringtone Title"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_addrtag"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="Tag"
                android:textColor="@color/upload_scrntext_clr"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/upload_edttxt_border"
                android:ems="10"
                android:hint="Tag"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_addplaceimage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/add_image"
                android:textColor="@color/upload_scrntext_clr"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_chooseringimg"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/general2_hoverbtnselect"
                    android:text="Browse Image"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!--
                     <Button
                    android:id="@+id/button_rimgupload"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/uploadimg_hoverbtnselect"
                    android:textSize="20sp" />
                -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:background="@drawable/image_border"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView_chooserimgshow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:padding="3dp"
                    android:src="@drawable/app_icon" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_clr"
            android:gravity="center"
            android:orientation="horizontal" >

            <!--
                <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/uploadbtn_hoverbtnselect" />
            -->

            <Button
                android:id="@+id/button_submit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/general1_hoverbtnselect"
                android:text="Submit"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>